[gd_scene load_steps=10 format=3 uid="uid://def00w4x32te7"]

[ext_resource type="Script" uid="uid://big1ggdcbx574" path="res://space_assault_game/scripts/sa_player.gd" id="1_3uov4"]
[ext_resource type="Texture2D" uid="uid://mt6wnnorip1f" path="res://space_assault_game/assets/textures/player_ship.png" id="2_0xtnh"]
[ext_resource type="AudioStream" uid="uid://5bvl1jayki7l" path="res://space_assault_game/assets/audio/sfx_laser2.wav" id="3_0xtnh"]

[sub_resource type="Gradient" id="Gradient_0xtnh"]
offsets = PackedFloat32Array(0, 0.958333)
colors = PackedColorArray(1, 1, 0, 0.74902, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jugy1"]
gradient = SubResource("Gradient_0xtnh")

[sub_resource type="Curve" id="Curve_p26gt"]
_data = [Vector2(0.0213904, 0.504897), 0.0, 0.0, 0, 0, Vector2(0.505348, 0.674646), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_56je0"]
curve = SubResource("Curve_p26gt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iumks"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 15, 1)
spread = 30.0
initial_velocity_min = -200.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_56je0")
color = Color(0.984314, 1, 0, 1)
color_ramp = SubResource("GradientTexture1D_jugy1")

[sub_resource type="CircleShape2D" id="CircleShape2D_dtmje"]
radius = 70.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 4
motion_mode = 1
script = ExtResource("1_3uov4")

[node name="FlameParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(-37, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_iumks")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.2, 0.195)
texture = ExtResource("2_0xtnh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 5.96046e-08)
scale = Vector2(0.2, 0.2)
shape = SubResource("CircleShape2D_dtmje")

[node name="RocketContainer" type="Node" parent="."]

[node name="RocketFireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0xtnh")

[connection signal="took_damage" from="." to="." method="_on_took_damage"]
